--- a/Application/Home/View/Public/footer.html
+++ b/Application/Home/View/Public/footer.html
@@ -1,21 +1,60 @@
 <div class="footer">
     <ul>
-        <a href="{:U('Index/index')}"><li><img src="http://wx.365xuet.com/Public/Weixin/images/footer-1-off.png"><img src="http://wx.365xuet.com/Public/Weixin/images/footer-1-on.png"><br><span>图书查询</span></li></a>
-        <a href="{:U('Import/fenlei')}"><li><img src="http://wx.365xuet.com/Public/Weixin/images/footer-2-off.png"><img src="http://wx.365xuet.com/Public/Weixin/images/footer-2-on.png"><br><span>图书录入</span></li></a>
-        <a onclick="login()"><li><img src="http://wx.365xuet.com/Public/Weixin/images/footer-4-off.png"><img src="http://wx.365xuet.com/Public/Weixin/images/footer-4-on.png"><br><span>我的</span></li></a>
+        <a href="{:U('Index/index')}" <if condition="$foot eq 1"> class="on"</if>><li><img src="http://wx.365xuet.com/Public/Weixin/images/footer-1-off.png"><img src="http://wx.365xuet.com/Public/Weixin/images/footer-1-on.png"><br><span>图书查询</span></li></a>
+        <a onclick="check_login(1)" <if condition="$foot eq 2"> class="on"</if>><li><img src="http://wx.365xuet.com/Public/Weixin/images/footer-2-off.png"><img src="http://wx.365xuet.com/Public/Weixin/images/footer-2-on.png"><br><span>图书录入</span></li></a>
+        <a onclick="check_login(2)" <if condition="$foot eq 3"> class="on"</if>><li><img src="http://wx.365xuet.com/Public/Weixin/images/footer-4-off.png"><img src="http://wx.365xuet.com/Public/Weixin/images/footer-4-on.png"><br><span>我的</span></li></a>
     </ul>
 </div>
-<script src="http://wx.365xuet.com/Public/Weui/js/jquery.min..js"></script>
 <script>
-    function login(){
-        var url = window.location.href;
-        window.location.href = "__APP__/Public/login?url=" + url;
-    }
-    $(".footer ul a").click(function(){
-//        alert($(this).siblings().find("img:eq(1)").html());
-        $(".footer ul a").find("li img:odd").hide();
-        $(".footer ul a").find("li img:even").show();
-        $(this).find("img:eq(0)").hide();
-        $(this).find("img:eq(1)").show();
+    $(function () {
+        check_login()
     });
+    function check_login() {
+        $.post("{:U('Public/is_login')}",{},function (data) {
+                if (data.status==0){
+                    window.location.href = "{:U('Public/login')}"
+                }
+                if (data.status==1){
+                    window.location.href = "{:U('index/index')}"
+                }
+        },"json");
+    }
+    function login(){
+        $.login({
+            title: '登录',
+            text: '请输入用户名和密码',
+            onOK: function (username, password) {
+                $.showLoading();
+                setTimeout(function() {
+                    $.hideLoading();
+                    $.post("{:U('Public/login')}",{username:username,password:password},function (data) {
+                        if (data.status==1){
+                            $.hideLoading();
+                            $.toast("登录成功!",function () {
+                                if (data.user.user_type==2){
+                                    window.location.href = "{:U('Import/index')}";
+                                }
+                                if (data.user.user_type==1){
+                                    window.location.href = "{:U('Mycenter/index')}";
+                                }
+                            });
+                        }else{
+                            $.hideLoading();
+                            $.toast(data.info,"text");
+                        }
+
+                    },"json");
+                }, 2000);
+            },
+            onCancel: function () {
+                $.toast('取消登录!', 'cancel');
+            }
+        });
+    }
+//    $(".footer ul a").click(function(){
+//        $(".footer ul a").find("li img:odd").hide();
+//        $(".footer ul a").find("li img:even").show();
+//        $(this).find("img:eq(0)").hide();
+//        $(this).find("img:eq(1)").show();
+//    });
 </script>
