--- a/Application/Home/View/Public/script-load-page.html
+++ b/Application/Home/View/Public/script-load-page.html
@@ -17,7 +17,13 @@
     <link rel="apple-touch-icon" sizes="76x76" href="touch-icon-iphone-76x76.png" />
     <!-- Retina iPad -->
     <link rel="apple-touch-icon" sizes="152x152" href="touch-icon-ipad-152x152.png" />
+
     <link rel="stylesheet" type="text/css" href="__PUBLIC__/css/style.css">
     <script type="application/javascript" src="http://wx.365xuet.com/Public/Weui/js/jquery-2.1.4.js"></script>
     <script type="application/javascript" src="http://wx.365xuet.com/Public/Weui/js/jquery-weui.min.js"></script>
+    <script type="application/javascript" src="http://wx.365xuet.com/Public/Weixin/js/jquery.cookie.js"></script>
+    <script type="application/javascript" src="http://wx.365xuet.com/Public/Weixin/js/jquery.form.js"></script>
+    <script type="application/javascript" src="http://wx.365xuet.com/Public/Weixin/js/commjslib.js"></script>
+    <script type="application/javascript" src="http://wx.365xuet.com/Public/Weixin/js/layer.m/layer.m.js"></script>
+    <script type="application/javascript" src="http://wx.365xuet.com/Public/Weixin/js/h5.js"></script>
 </head>
