--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -17,6 +17,26 @@ a{color:grey;}
 .top{
     width:100%;
 }
+
+.login{width:100%;margin:0 auto; padding:0px; display:table}
+.login img{width:25%; margin-top:15%}
+
+.login_1{width:90%; margin:0 auto; padding:0px; display:table; margin-top:10%;font-size:16px;}
+.login_1 ul{width:100%; margin:0 auto; padding:0px; display:table}
+.login_1 ul li{width:100%; height:55px;line-height:55px;list-style:none;color:#cccccb}
+.login_1 ul li img{width:22px; float:left; margin-top:15px; margin-left:10px}
+.login_input{border:none;width:80%;height:50px;  float:left; margin-left:5px;}
+.login_checkbox{border: #f50 1px solid; background:#f50}
+.login_line{border-bottom:#dedede 1px solid;}
+.login_left{width:50%;float:left; text-align:left; padding-left:10px;}
+.login_left font{ margin-left:5px;}
+.login_right{width:40%;float:right; text-align:right;}
+.login_right a{ color:#cccccb; text-decoration:none}
+.login_right a:hover{ color:#ea5151; text-decoration:none}
+
+.login_but{width:90%;margin:10% 5%; height:50px; line-height:50px; background:#f56b6b; border:none; border-radius:6px; font-size:18px; color:#FFF; text-align:center}
+
+
 .top .left-t{  display:inline-block;float:left;width:65vw;padding-left:5vw;padding-right:5vw;  }
 .right-t{line-height: 15vw;display:inline-block;width:20vw;padding-left:5vw; margin-top:1.78vw;}
 .right-t-div{background-color:white;border-radius: 1vw;height:7.67vw;margin-top:3.2vw;}
@@ -82,7 +102,7 @@ a{color:grey;}
 .right_t{width:25%;float:right;}
 .right_t a{ color:#FFFFFF; text-decoration:none; margin-right:10px; font-size:16px;}
 
-.content{position: absolute;}
+.content{position: absolute;width: 100%}
 .content_top{ width: 95vw;  margin: 56px 2.5vw 3vh 2.5vw;  position: relative;  background-color: white;  height: 23vh;}
 .content_top img{height: 100%}
 .content_description{width: 95vw;margin: 0 auto 45px auto}
