--- a/Application/Home/View/Libraryadmin/library_information_detail.html
+++ b/Application/Home/View/Libraryadmin/library_information_detail.html
@@ -5,7 +5,7 @@
 <div class="header" style="z-index:5;">
     <a href="{:U('Libraryadmin/library_information',array('type'=>$type))}"><div class="left_t header_back">
 
-    </div>
+    </div></a>
     <div class="middle_t site_20">{$title}</div>
     <div class="right_t">
         <if condition="$user_type eq 2">
