--- a/Application/Home/View/Mycenter/order.html
+++ b/Application/Home/View/Mycenter/order.html
@@ -67,6 +67,7 @@
                 <input type="hidden" name="uid" value="{$id}">
                 <input type="hidden" name="table_name" value="comments">
                 <input type="hidden" name="post_id" id="post_id">
+                <input type="hidden" name="full_name" value="{$user_name}">
                 <section>
                     <a href="javascript:;" class="weui_btn weui_btn_primary" id="save_info">确定提交</a>
                     <a href="javascript:;" class="weui_btn weui_btn_plain_primary close-popup">关闭</a>
