--- a/Application/Home/View/Libraryadmin/index.html
+++ b/Application/Home/View/Libraryadmin/index.html
@@ -65,6 +65,14 @@
         </tr>
         <tr></tr>
             </if>
+        <if condition="$user_type eq 2">
+            <tr>
+                <td width="33%"><a href="{:U('user_manage')}" class="img13">会员管理</a></td>
+                <td width="33%"></td>
+                <td width="33%"></td>
+            </tr>
+            <tr></tr>
+        </if>
         </tbody>
     </table>
 </nav>
