--- a/Application/Home/View/Mycenter/setting.html
+++ b/Application/Home/View/Mycenter/setting.html
@@ -41,7 +41,7 @@
             <div class="weui_cell weui_cell_select">
                 <div class="weui_cell_hd"><label style="padding-left: 15px; " for="" class="weui_label">性别</label></div>
                 <div class="weui_cell_bd weui_cell_primary">
-                    <select name="sex" class="weui_select" name="select1">
+                    <select name="sex" class="weui_select" >
                         <option <if condition="$sex eq 0"> selected="selected"</if> value="0">保密</option>
                         <option  <if condition="$sex eq 1"> selected="selected"</if> value="1">男</option>
                         <option  <if condition="$sex eq 2"> selected="selected"</if> value="2">女</option>
